# GweiOps

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
dashboard/: LICENSE  (+3 more)
gwei/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gwei/docs/: API.md
gwei/frontend/: package.json
gwei/frontend/src/app/: layout.tsx  page.tsx
gwei/frontend/src/app/dashboard/: page.tsx
gwei/frontend/src/components/: ConfigForm.tsx  IssueCard.tsx
gwei/src/: main.py
gwei/src/agent/: __init__.py  graph.py  nodes.py  state.py
gwei/src/db/: __init__.py
gwei/src/models/: __init__.py  issue.py  patch.py  pr.py  project.py  session.py  vote.py
gwei/src/services/: __init__.py  code_analyzer.py  duplicate_detector.py  labeler.py  llm.py  logger.py  metrics.py  pr_webhook.py  template.py  voting.py  webhook.py
gwei/tests/: conftest.py  test_agent_graph.py  test_agent_state.py  test_code_analyzer.py  test_code_reviewer.py  test_completeness.py  test_config.py  test_duplicate_detector.py  test_e2e.py  test_embedding.py  test_git_tool.py  test_integration.py  test_labeler.py  test_llm.py  test_llm_real.py  test_metrics.py  test_models.py  test_multilang_analyzer.py  test_patch_generator.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_pr_creator.py  test_pr_iteration.py  test_pr_webhook.py  test_reproducer.py  test_review_report.py  test_template.py  test_vector_search.py  test_voting.py  test_webhook.py
(+179 files in other folders)
